Added description of libraries variable

--- a/project.ipynb
+++ b/project.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "## Abstract\n",
-    "The following document is a code review for the solution of NP-Hard problem, described by Google in Google Hashcode 2020 problem statement. This problem has been assigned as a semester project for Combinatorial Optimization course by M.Sc. Jarosław Synak. Given the problem is NP-Hard, we decided to implement the Genetic Algorithm. We also decided to update GA principals to meet our needs. The key difficulty occurred finding good heuristic function."
+    "The following document is a code review for the solution of NP-Hard problem, described by Google in Google Hashcode 2020 problem statement. This problem has been assigned as a semester project for Combinatorial Optimization course by M.Sc. Jarosław Synak. The given problem is NP-Hard, we decided to implement the Genetic Algorithm. We also decided to update GA principals to meet our needs. The key difficulty occurred finding good heuristic function."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "To compute heuristic value for library we use following formula:\n",
     "$$heuristicValue=\\frac{\\sum_{i=0}^{size}bookScore_{i}}{max(0.01, var(bookScores))*signUpTime}$$\n",
-    "We want to maximize the sum of scores of books in the given library. That is why we put this value in the numerator. Another factor which we decided to take into account time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. The last factor, which changed the results of our program was the variance of books' scores in the library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0."
+    "We want to maximize the sum of scores of books in the given library. That is why we put this value in the numerator. Another factor which we decided to take into account was time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. The last factor, which changed the results of our program was the variance of books' scores in the library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0."
    ]
   },
   {
@@ -172,7 +172,7 @@
     "        particular_solution = [i, 0, []]\n",
     "        available_books.sort(key = lambda x: books_scores[x], reverse = True)\n",
     "        for x in available_books:\n",
-    "            if len(particular_solution[2]) > time_pointer * books_per_day:\n",
+    "            if len(particular_solution[2]) >= time_pointer * books_per_day:\n",
     "                break\n",
     "            if x not in used_books:\n",
     "                particular_solution[2].append(x)\n",
@@ -414,7 +414,7 @@
    "metadata": {},
    "source": [
     "## Read data\n",
-    "The following part of a code is responsible for decapsulation input data for useful and understable for the program form."
+    "The following part of a code is responsible for decapsulation input data to useful and understable for the program form."
    ]
   },
   {
@@ -427,8 +427,50 @@
     "books_scores = tuple([int(x) for x in input().split()])\n",
     "libraries = [None] * libraries_number\n",
     "for i in range(libraries_number):\n",
-    "    libraries[i] = (tuple([int(x) for x in input().split()]), tuple([int(x) for x in input().split()]))\n",
+    "    libraries[i] = tuple([int(x) for x in input().split()]), tuple([int(x) for x in input().split()])\n",
     "libraries = tuple(libraries)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuple libraries is a complex variable. Thus we present structure of this variable:\n",
+    "\\newline\n",
+    "\\setlength{\\parindent}{5mm}\n",
+    "\\indent [tuple] `libraries`\\newline\n",
+    "\\indent List of all libraries. Length of this tuple equals `libraries_number`\\newline\n",
+    "\\indent For instance `(((3, 2, 1), (2, 17, 3)), ..., ...)`\n",
+    "\n",
+    "\\setlength{\\parindent}{10mm}\n",
+    "\\indent [tuple] `libraries[i]`\\newline\n",
+    "\\indent Tuple of data and books available in library of ID `i`.\\newline\n",
+    "\\indent For instance `((3, 2, 1), (2, 17, 3))`\n",
+    "\n",
+    "\\setlength{\\parindent}{15mm}\n",
+    "\\indent [tuple] `libraries[i][0]`\\newline\n",
+    "\\indent Tuple of data about library of ID `i`. Size of this tuple is fixed to 3.\\newline\n",
+    "\\indent For instance: `(3, 2, 1)`\n",
+    "\n",
+    "\\setlength{\\parindent}{20mm}\n",
+    "\\indent [int] `libraries[i][0][0]`\\newline\n",
+    "\\indent Number of books available in library of ID `i`.\\newline\n",
+    "\\indent For instance: `3`\n",
+    "\n",
+    "\\setlength{\\parindent}{20mm}\n",
+    "\\indent [int] `libraries[i][0][1]`\\newline\n",
+    "\\indent Number of days library of ID `i` requires to sign up.\\newline\n",
+    "\\indent For instance: `2`\n",
+    "\n",
+    "\\setlength{\\parindent}{20mm}\n",
+    "\\indent [int] `libraries[i][0][2]`\\newline\n",
+    "\\indent Number of books that may be shipped to scan center per day.\\newline\n",
+    "\\indent For instance: `1`\n",
+    "\n",
+    "\\setlength{\\parindent}{15mm}\n",
+    "\\indent [tuple] `libraries[i][1]`\\newline\n",
+    "\\indent Tuple containg IDs of books available in the library of ID `i`.\\newline\n",
+    "\\indent For instance: `(2, 17, 3)`"
    ]
   },
   {
@@ -529,7 +571,7 @@
     "\n",
     "for i in range(1, len(population[0])):\n",
     "    print(population[0][i][0], population[0][i][1], end = \" \")\n",
-    "    print(\" \".join([str(x) for x in population[0][i][2]]))\n"
+    "    print(\" \".join([str(x) for x in population[0][i][2]]))"
    ]
   },
   {
@@ -538,13 +580,14 @@
    "source": [
     "# Sum of all instances\n",
     "After applying everything that was explained above, we run the program for six different data sets which were given. The final answer is the sum of the best scores for the individual data sets. The results are showed below.\n",
-    "\\begin{itemize}\n",
-    "\\item \\texttt{a_example.txt solution is:  21}\n",
-    "\\item \\texttt{b_read_on.txt solution is:  5831900}\n",
-    "\\item \\texttt{c_incunabula.txt solution is:  5414171}\n",
-    "\\item \\texttt{d_tough_choices.txt solution is:  4815200}\n",
-    "\\item \\texttt{e_so_many_books.txt solution is:  4610173}\n",
-    "\\item \\texttt{f_libraries_of_the_world.txt solution is:  4116926}\n",
+    "\n",
+    "\\begin{itemize} \n",
+    "    \\item \\texttt{a{\\textunderscore}example.txt} solution is: 21\n",
+    "    \\item \\texttt{b{\\textunderscore}read{\\textunderscore}on.txt} solution is: 5831900\n",
+    "    \\item \\texttt{c{\\textunderscore}incunabula.txt} solution is: 5414171\n",
+    "    \\item \\texttt{d{\\textunderscore}tough{\\textunderscore}choices.txt} solution is: 4815200\n",
+    "    \\item \\texttt{e{\\textunderscore}so{\\textunderscore}many{\\textunderscore}books.txt} solution is: 4610173 \n",
+    "    \\item \\texttt{f{\\textunderscore}libraries{\\textunderscore}of{\\textunderscore}the{\\textunderscore}world.txt} solution is: 4116926\n",
     "\\end{itemize}\n",
     "\n",
     "So it gives us the total solution of 24788391 points."
@@ -567,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
