--- a/project.ipynb
+++ b/project.ipynb
@@ -170,9 +170,8 @@
     "        books_per_day = libraries[i][0][2]\n",
     "        available_books = list(libraries[i][1])\n",
     "        particular_solution = [i, 0, []]\n",
-    "        available_books.sort(key = lambda x: books_scores[x], reverse = True)\n",
     "        for x in available_books:\n",
-    "            if len(particular_solution[2]) >= time_pointer * books_per_day:\n",
+    "            if len(particular_solution[2]) > time_pointer * books_per_day:\n",
     "                break\n",
     "            if x not in used_books:\n",
     "                particular_solution[2].append(x)\n",
@@ -427,7 +426,7 @@
     "books_scores = tuple([int(x) for x in input().split()])\n",
     "libraries = [None] * libraries_number\n",
     "for i in range(libraries_number):\n",
-    "    libraries[i] = tuple([int(x) for x in input().split()]), tuple([int(x) for x in input().split()])\n",
+    "    libraries[i] = tuple([int(x) for x in input().split()]), tuple(sorted([int(x) for x in input().split()], key = lambda x: books_scores[x], reverse = True))\n",
     "libraries = tuple(libraries)"
    ]
   },
