Added mechanisms to prevent stucking in local optima

--- a/project.ipynb
+++ b/project.ipynb
@@ -84,8 +84,8 @@
    "metadata": {},
    "source": [
     "To compute heuristic value for library we use following formula:\n",
-    "$$heuristicValue=\\frac{\\sum_{i=0}^{size}bookScore_{i}}{max(0.01, var(bookScores))*signUpTime}$$\n",
-    "We want to maximize the sum of scores of books in the given library. That is why we put this value in the numerator. Another factor which we decided to take into account was time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. The last factor, which changed the results of our program was the variance of books' scores in the library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0."
+    "$$heuristicValue=\\sqrt{\\frac{\\sum_{i=0}^{size}bookScore_{i}}{max(0.01, var(bookScores))*signUpTime}}$$\n",
+    "We want to maximize the sum of scores of books in the given library. That is why we put this value in the numerator. Another factor which we decided to take into account was time necessary to sign up the library - we want to minimize this factor, so we put it in the denominator. The last factor, which changed the results of our program was the variance of books' scores in the library. In some test cases, for some libraries variance was equal to zero, so we added substitution with 0.01 if variance equals 0. At the end we take square root of value computed using previously described steps, to make more probable to choose also libraries with lower values. Therefore we try to avoid stucking in local optima."
    ]
   },
   {
