Variable description added, advantages of GA

--- a/project.ipynb
+++ b/project.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "## Authors\n",
-    "Magdalena Kobusińska (145463) and Jacek Karolczak (145446)"
+    "Magdalena Kobusińska nr 145463; 2nd group (Wednesday 8:00)   \n",
+    "Jacek Karolczak nr 145446; 1st group (Wednesday 9:45)"
    ]
   },
   {
@@ -20,7 +21,121 @@
    "metadata": {},
    "source": [
     "## Abstract\n",
-    "The following document is a code review for the solution of NP-Hard problem, described by Google in Google Hashcode 2020 problem statement. This problem has been assigned as a semester project for Combinatorial Optimization course by M.Sc. Jarosław Synak. The given problem is NP-Hard, we decided to implement the Genetic Algorithm. We also decided to update GA principals to meet our needs. The key difficulty occurred finding good heuristic function."
+    "The following document is a code review for the solution of NP-Hard problem, described by Google in Google Hashcode 2020 problem statement. This problem has been assigned as a semester project for Combinatorial Optimization course by M.Sc. Jarosław Synak. The given problem is NP-Hard, we decided to implement the Genetic Algorithm. We also decided to update GA principals to meet our needs. The key difficulty occurred finding good heuristic function.\n",
+    "\n",
+    "### About the method\n",
+    "A genetic algorithm are randomized search algorithms that is inspired by and made to imitate the mechanics of natural selection and natural genetics.It reflects the process of natural selection where the fittest individuals are selected for reproduction in order to produce offspring of the next generation.\n",
+    "\n",
+    "We choose it mostly because the genetic algorithm can easily be adjusted to the problem at hand. Almost any aspect of the algorithm may be changed and customized.\n",
+    "Also, it is worth noting that GA has a lot of advantages, eg. \n",
+    "\n",
+    "* The concept is easy to understand\n",
+    "* It's stochastic\n",
+    "* It searches from a population of points, not a single point\n",
+    "* It doesn't require any derivative information (There is every possibility that there may not be any information that we can rely on based on the problem).\n",
+    "* It's faster and efficient when compared to the traditional methods of brute-force/greedy search.\n",
+    "* It hase many parallel capabilities\n",
+    "* Optimizes both continuous and discrete functions and also multi-objective problems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables desctiption"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Input variables\n",
+    "\n",
+    "    [int] books_number   \n",
+    "    Total number of books in all libraries.  \n",
+    "    For instance: 1000  \n",
+    "\n",
+    "    [int] libraries_number   \n",
+    "    Number of libraries.  \n",
+    "    For instance: 500  \n",
+    "\n",
+    "    [int] days_number  \n",
+    "    Number of days. Time period available for signing and scanning.  \n",
+    "    For instance: 80  \n",
+    "\n",
+    "    [tuple] books   \n",
+    "    List of all books' scores.\n",
+    "    For instance: (1, 2, 3)\n",
+    "\n",
+    "    [int] books[i]\n",
+    "        Score of a book of ID 'i'. Example: If books[0] equals 10, then score of book of ID 0 equals 10.\n",
+    "        For instance: 20\n",
+    "\n",
+    "    [tuple] libraries  \n",
+    "    List of all libraries. Length of this tuple equals libraries_number\n",
+    "    For instance (((3, 2, 1), (2, 17, 3)), ..., ...)\n",
+    "\n",
+    "        [tuple] libraries[i]\n",
+    "        Tuple of data and books available in library of ID 'i'.\n",
+    "        For instance ((3, 2, 1), (2, 17, 3))\n",
+    "\n",
+    "            [tuple] libraries[i][0]\n",
+    "            Tuple of data about library of ID 'i'. Size of this tuple is fixed to 3.\n",
+    "            For instance: (3, 2, 1)\n",
+    "\n",
+    "                [int] libraries[i][0][0]\n",
+    "                Number of books available in library of ID 'i'.\n",
+    "                For instance: 3\n",
+    "\n",
+    "                [int] libraries[i][0][1]\n",
+    "                Number of days library of ID 'i' requires to sign up.\n",
+    "                For instance: 2\n",
+    "\n",
+    "                [int] libraries[i][0][2]\n",
+    "                Number of books that may be shipped to scan center per day.\n",
+    "                For instance: 1\n",
+    "\n",
+    "            [tuple] libraries[i][1]\n",
+    "            Tuple containg IDs of books available in the library of ID 'i'\n",
+    "            For instance: (2, 17, 3)\n",
+    "  \n",
+    "  \n",
+    "### Variable needed while running the script\n",
+    "    [list] population\n",
+    "    List containg many solutions and their values. For more specific info about solutions see bellow.\n",
+    "    For instance: [(20, solution2), (30, solution1)]\n",
+    "\n",
+    "        [int] population[0]\n",
+    "        Value of a single, particular and complete solution.\n",
+    "        For instance: 90\n",
+    "\n",
+    "        [tuple] population[1]\n",
+    "        Solution. For more specific info about solutions see bellow.\n",
+    "        \n",
+    "### Output variable  \n",
+    "    [tuple] solution\n",
+    "    Tuple containg one, particular, solution of a problem. Length of this tuple is fixed to 2.\n",
+    "    For instance: (2, (1, 3, (5, 2, 3)), (0, 5, (0, 1, 2, 3, 4)))\n",
+    "\n",
+    "        [tuple] solution[i][0]\n",
+    "        Number of libraries that will be signed up for scanning (in solution of ID 'i').\n",
+    "        For instance: 2\n",
+    "\n",
+    "        [tuple] solution[i][j] (constraint: 1 >= j >= solution[i][0])\n",
+    "        Information about library which will be signed up as a j-th one.\n",
+    "        For instance: (1, 3, (5, 2, 3))\n",
+    "\n",
+    "            [int] solution[i][j][0]\n",
+    "            ID of a library which will be signed up as a j-th one.\n",
+    "            For instance: 1\n",
+    "\n",
+    "            [int] solution[i][j][1]\n",
+    "            Amount of books which will be signed up for scanning.\n",
+    "            For instance: 3\n",
+    "\n",
+    "            [tuple] solution[i][j][2]\n",
+    "            IDs of books that will be send for scanning from library of ID solution[i][j][0], id order\n",
+    "            For instance: (5, 2, 3)"
    ]
   },
   {
@@ -45,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
