Finalised project by adding code overview and spript in .py file.

--- a/project.ipynb
+++ b/project.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variables desctiption"
+    "## Variables description"
    ]
   },
   {
@@ -68,7 +68,8 @@
     "    For instance: (1, 2, 3)\n",
     "\n",
     "    [int] books[i]\n",
-    "        Score of a book of ID 'i'. Example: If books[0] equals 10, then score of book of ID 0 equals 10.\n",
+    "        Score of a book of ID 'i'. Example: If books[0] equals 10, \n",
+    "        then score of book of ID 0 equals 10.\n",
     "        For instance: 20\n",
     "\n",
     "    [tuple] libraries  \n",
@@ -80,7 +81,8 @@
     "        For instance ((3, 2, 1), (2, 17, 3))\n",
     "\n",
     "            [tuple] libraries[i][0]\n",
-    "            Tuple of data about library of ID 'i'. Size of this tuple is fixed to 3.\n",
+    "            Tuple of data about library of ID 'i'. \n",
+    "            Size of this tuple is fixed to 3.\n",
     "            For instance: (3, 2, 1)\n",
     "\n",
     "                [int] libraries[i][0][0]\n",
@@ -102,7 +104,8 @@
     "  \n",
     "### Variable needed while running the script\n",
     "    [list] population\n",
-    "    List containg many solutions and their values. For more specific info about solutions see bellow.\n",
+    "    List containg many solutions and their values. \n",
+    "    For more specific info about solutions see bellow.\n",
     "    For instance: [(20, solution2), (30, solution1)]\n",
     "\n",
     "        [int] population[0]\n",
@@ -114,11 +117,13 @@
     "        \n",
     "### Output variable  \n",
     "    [tuple] solution\n",
-    "    Tuple containg one, particular, solution of a problem. Length of this tuple is fixed to 2.\n",
+    "    Tuple containg one, particular, solution of a problem. \n",
+    "    Length of this tuple is fixed to 2.\n",
     "    For instance: (2, (1, 3, (5, 2, 3)), (0, 5, (0, 1, 2, 3, 4)))\n",
     "\n",
     "        [tuple] solution[i][0]\n",
-    "        Number of libraries that will be signed up for scanning (in solution of ID 'i').\n",
+    "        Number of libraries that will be signed up for scanning \n",
+    "        (in solution of ID 'i').\n",
     "        For instance: 2\n",
     "\n",
     "        [tuple] solution[i][j] (constraint: 1 >= j >= solution[i][0])\n",
@@ -134,7 +139,8 @@
     "            For instance: 3\n",
     "\n",
     "            [tuple] solution[i][j][2]\n",
-    "            IDs of books that will be send for scanning from library of ID solution[i][j][0], id order\n",
+    "            IDs of books that will be send for scanning from library \n",
+    "            of ID solution[i][j][0]\n",
     "            For instance: (5, 2, 3)"
    ]
   },
@@ -216,7 +222,7 @@
     "    scores = [books_scores[x] for x in books]\n",
     "    total_score = sum(scores)\n",
     "    variance = statistics.variance(scores)\n",
-    "    return total_score / (max(0.01, variance) * library[0][1]) ** 1/2"
+    "    return (total_score / (max(0.01, variance) * library[0][1])) ** (1 / 2)"
    ]
   },
   {
@@ -410,13 +416,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our Genetic Algorithm mutate each solution, we do not use any probability to determine chance of mutation occurence like in a typicial GP."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -425,7 +424,8 @@
     "def do_mutations(population, libraries, days_number, books_scores):\n",
     "    mutated_solutions = []\n",
     "    for solution in population:\n",
-    "        mutated_solutions.append(mutate(solution, libraries, days_number, books_scores))\n",
+    "        if random.random() < 0.25:\n",
+    "            mutated_solutions.append(mutate(solution, libraries, days_number, books_scores))\n",
     "    return mutated_solutions"
    ]
   },
